fix logic
